fix(catalog): remove gap on sales swiper 🐛

--- a/app/scss/catalog.scss
+++ b/app/scss/catalog.scss
@@ -439,6 +439,7 @@
     @include mq('tablet') {
       justify-content: start;
       flex-wrap: nowrap;
+      gap: 0;
     }
   }
 
